# Display_bmp

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.projbuild  LICENSE  README.md  lv_conf.h  partitions.csv  sdkconfig  sdkconfig.defaults
components/battery/: CMakeLists.txt  battery.c  battery.h
components/can/: can.c  can.h
components/can_display/: CMakeLists.txt  can_display.c  can_display.h
components/config/: CMakeLists.txt  config.h  display.c
components/gpio/: gpio.c  gpio.h
components/gui/: CMakeLists.txt  gui.c  gui.h  idf_component.yml
components/gui_paint/: CMakeLists.txt  gui_bmp.c  gui_image.c  gui_image.h  gui_jpg.c  gui_jpg.h  gui_paint.c  gui_paint.h  gui_png.c  gui_png.h
components/i2c/: i2c.c  i2c.h
components/image/: CMakeLists.txt  image.c  image.h
components/image_fetcher/: CMakeLists.txt  image_fetcher.c  image_fetcher.h
components/io_extension/: CMakeLists.txt  io_extension.c  io_extension.h
components/jpeg/: CMakeLists.txt  tjpgdcnf.h
components/lvgl_fs/: CMakeLists.txt  lvfs_fatfs.c  lvfs_fatfs.h
components/png/: CMakeLists.txt
components/rgb_lcd_port/: CMakeLists.txt  rgb_lcd_port.c  rgb_lcd_port.h
components/rs485_display/: CMakeLists.txt  rs485_display.c  rs485_display.h
components/sd/: sd.c  sd.h
components/touch/: CMakeLists.txt  esp_lcd_touch.h  gt911.c  gt911.h  touch.h
components/usart/: usart.h
main/: CMakeLists.txt  Kconfig.projbuild  file_manager.c  file_manager.h  http_server.c  http_server.h  idf_component.yml  main.c  pm.h  touch_task.c  touch_task.h  ui_navigation.c  ui_navigation.h
(+9 files in other folders)
